[package]
name = "drumonitor"
version = "0.1.1"
authors = ["ArchDruid"]
edition = "2021"
description = "A resource monitor for Arch Linux based systems"
[dependencies]
human_bytes = { version = "0.4.3", features = ["fast"], default-features = false }
clap = { version = "4.5.7", features = ["cargo"] }
